Refactorizacion de consumo de apiI